--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
 <body>
     <h1>Hello world!</h1>
     <h2>Ahsan Habib Ash</h2>
+    <picture>
+        <source media="(650px)" srcset="ALL-HTML-ATTRIBUTE-ELEMENT/images/fasion12.jpg">
+        <source media="(465px)" srcset="ALL-HTML-ATTRIBUTE-ELEMENT/images/fasion9.jpg">
+        <img src="ALL-HTML-ATTRIBUTE-ELEMENT/images/fasion11.jpg" alt="A Model Girl">
+    </picture>
 </body>
 </html>
